[package]
name = "klenkiven-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
lazy_static = "1.4.0"
minreq = { version = "2.7.0", features = ["https"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
